# opengl_algorithms

./: CMakeLists.txt  README.md
dependencies/glad/: glad.c  glad.h
src/: main.cpp
